@@ -1,4 +1,10 @@
 ------------------------------------------------------
+Release 1 | Beta 0 | Development 0 | Experimental 2
+
+* Attempted to improve the selection within the
+  GUITextBox
+
+------------------------------------------------------
 Release 1 | Beta 0 | Development 0 | Experimental 1
 
 * Added GUITextBoxSelection
